# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: .coverage  .coveragerc
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/: erotus.py  index.py  logger.py  osamaara.py  summa.py  tulo.py
viikko2/nhl-reader/: .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login/: log.html  output.xml  report.html
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: .coverage  .coveragerc  pyproject.toml
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: index.py  kayttoliittyma.py  komennot.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset-original/: pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: index.py  kivi_paperi_sakset.py  kps_parempi_tekoaly.py  tehdasfunktio.py  tekoaly.py  tuomari.py
viikko7/kivi-paperi-sakset/src/: app.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  tekoaly_parannettu.py
viikko7/kivi-paperi-sakset/src/templates/: index.html  pelaa.html
viikko7/kivi-paperi-sakset/src/tests/: test_app.py
(+8 files in other folders)
